Refactor dropdown into reusable GUI component